# polypartition

./: CMakeLists.txt  README.md  pyproject.toml  test_hm.py
python/polypartition/: __init__.py
python/src/: polypartition_py.cpp
src/: hm_eigen.cpp  hm_eigen.hpp
